--- a/_posts/2017-03-08-01.jekyll.md
+++ b/_posts/2017-03-08-01.jekyll.md
@@ -26,20 +26,7 @@ gem install bundler
 ```
 
 ## 03. jekyll 폴더이동(Gemfile에 define된 dependency 설치)
-
-```
-Gemfile 예시
-source 'https://rubygems.org'
-
-gem 'jekyll', '3.3.1'
-
-group :jekyll_plugins do
-	gem 'jekyll-feed', '0.6.0'
-	gem 'jekyll-seo-tag', '2.1.0'
-	gem 'jekyll-paginate', '1.1.0'
-	gem 'jekyll-sitemap', '1.0.0'
-end
-```
+<p></p><div class="colorscripter-code" style="color:#010101; font-family:Consolas, 'Liberation Mono', Menlo, Courier, monospace !important; position:relative !important; overflow:auto"><table class="colorscripter-code-table __se_tbl_ext" style="margin:0; padding:0; border:none; background-color:#fafafa; border-radius:4px;" cellspacing="0" cellpadding="0"><tbody><tr><td style="padding:6px; border-right:2px solid #e5e5e5"><div style="margin: 0px; padding: 0px; word-break: normal; text-align: right; color: rgb(102, 102, 102); line-height: 130%;"><div style="line-height:130%">1</div><div style="line-height:130%">2</div><div style="line-height:130%">3</div><div style="line-height:130%">4</div><div style="line-height:130%">5</div><div style="line-height:130%">6</div><div style="line-height:130%">7</div><div style="line-height:130%">8</div><div style="line-height:130%">9</div><div style="line-height:130%">10</div><div style="line-height:130%">11</div></div></td><td style="padding:6px 0"><div style="margin: 0px; padding: 0px; line-height: 130%;"><div style="padding:0 6px; white-space:pre; line-height:130%">#&nbsp;Gemfile&nbsp;예시</div><div style="padding:0 6px; white-space:pre; line-height:130%">source&nbsp;<span style="color:#63a35c">'https://rubygems.org'</span></div><div style="padding:0 6px; white-space:pre; line-height:130%">&nbsp;</div><div style="padding:0 6px; white-space:pre; line-height:130%">gem&nbsp;<span style="color:#63a35c">'jekyll'</span>,&nbsp;<span style="color:#63a35c">'3.3.1'</span></div><div style="padding:0 6px; white-space:pre; line-height:130%">&nbsp;</div><div style="padding:0 6px; white-space:pre; line-height:130%">group&nbsp;:jekyll_plugins&nbsp;do</div><div style="padding:0 6px; white-space:pre; line-height:130%">&nbsp;&nbsp;&nbsp;&nbsp;gem&nbsp;<span style="color:#63a35c">'jekyll-feed'</span>,&nbsp;<span style="color:#63a35c">'0.6.0'</span></div><div style="padding:0 6px; white-space:pre; line-height:130%">&nbsp;&nbsp;&nbsp;&nbsp;gem&nbsp;<span style="color:#63a35c">'jekyll-seo-tag'</span>,&nbsp;<span style="color:#63a35c">'2.1.0'</span></div><div style="padding:0 6px; white-space:pre; line-height:130%">&nbsp;&nbsp;&nbsp;&nbsp;gem&nbsp;<span style="color:#63a35c">'jekyll-paginate'</span>,&nbsp;<span style="color:#63a35c">'1.1.0'</span></div><div style="padding:0 6px; white-space:pre; line-height:130%">&nbsp;&nbsp;&nbsp;&nbsp;gem&nbsp;<span style="color:#63a35c">'jekyll-sitemap'</span>,&nbsp;<span style="color:#63a35c">'1.0.0'</span></div><div style="padding:0 6px; white-space:pre; line-height:130%">end</div></div></td><td style="vertical-align:bottom; padding:0 2px 4px 0"><a href="http://colorscripter.com/info#e" target="_blank" style="text-decoration:none; color:white"><span style="font-size: 9px; word-break: normal; background-color: rgb(229, 229, 229); border-radius: 10px; padding: 1px;">cs</span></a></td></tr></tbody></table></div><p><br></p>
 
 ```
 gem bundle install
