[posting] customized ui

--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -5,29 +5,29 @@ date: 2017-03-09T02:00
 ---
 
 ---
-<h1 style="background:aliceblue;padding-left:10px;">OPEN API</h1>
+<h1 class="table-contents">OPEN API</h1>
  * Naver
    * Naver OAuth 2.0 for Android [[보기]](/2017/03/08/02.oauth.naver/) 
  * Kakao
    * Kakao OAuth 2.0 for Android [[보기]](/2017/03/09/01.oauth.kakao/)    
    
 ---
-<h1 style="background:aliceblue;padding-left:10px;">NOSQL</h1>
+<h1 class="table-contents">NOSQL</h1>
  * mongoDB
    * mongoDB 설치 가이드 및 CRUD 예제 [[보기]](/2016/11/17/02.post.mongodb/) 
    * mongoDB 테스트용 json파일 import 및 document(bson) 조회 [[보기]](/2016/11/17/03.post.mongodb/)  
 
 ---
-<h1 style="background:aliceblue;padding-left:10px;">JEKYLL</h1>
+<h1 class="table-contents">JEKYLL</h1>
  * jekyll 환경구축
    * ruby 및 thirdparty lib 설치하기 [[보기]](/2017/03/08/01.jekyll/) 
 
 ---
-<h1 style="background:aliceblue;padding-left:10px;">GRADLE</h1>
+<h1 class="table-contents">GRADLE</h1>
  * android lib module 생성 후 application에서 참조하기 [[보기]](/2017/03/09/02.gradle.android/)    
    
 ---
-<h1 style="background:aliceblue;padding-left:10px;">C++</h1>
+<h1 class="table-contents">C++</h1>
  * C++ keywords [[보기]](/2017/03/05/98.keywords/) 
  * 윤성우 열혈강의 C++ 프로그래밍 예제코드
      1. C언어 기반의 C++ 1 [[보기]](/2017/03/02/01.cplusplus/) 
@@ -101,7 +101,7 @@ date: 2017-03-09T02:00
 	 * C++에서의 형 변환 연산 
 
 ---
-<h1 style="background:aliceblue;padding-left:10px;">ETC</h1>
+<h1 class="table-contents">ETC</h1>
 
 
 
