[posting] customized ui

--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -29,7 +29,7 @@ date: 2017-03-12T02:00
 ---
 <h1 class="table-contents">C++</h1>
  * C++ keywords [[보기]](/2017/03/05/98.keywords/) 
- * 윤성우 열혈강의 C++ 프로그래밍 예제코드
+ * 윤성우 열혈강의 C++ 프로그래밍 예제코드 <a style="cursor:pointer;" onclick="javascript:$('ol li ul li').css('display','list-item');">[전체보기]</a>
      1. C언어 기반의 C++ 1 [[보기]](/2017/03/02/01.cplusplus/) 
      * printf와 scanf를 대신하는 입출력 방식	
      * 함수 오버로딩(Function Overloading)	
