[posting] add category label

--- a/_posts/2017-03-14-01.gradle.java.md
+++ b/_posts/2017-03-14-01.gradle.java.md
@@ -2,6 +2,7 @@
 layout: post
 title: java project third party lib 포함해서 빌드하기
 date: 2017-03-14T01:00
+category: app
 ---
 
 <img class="fit image" src="/images/post/gradle.png">
