--- a/_posts/2017-03-09-02.gradle.android.md
+++ b/_posts/2017-03-09-02.gradle.android.md
@@ -2,6 +2,7 @@
 layout: post
 title: android lib module 생성 후 application에서 참조하기
 date: 2017-03-09T01:00
+category: app
 ---
 
 <img class="fit image" src="/images/post/gradle.png">
