[etc] cofig url 변경

--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -24,8 +24,8 @@ date: 2017-03-21T02:00
 
 ---
 <h1 class="table-contents">GRADLE</h1>
- * android lib module 생성 후 application에서 참조하기 [[보기]](/2017/03/09/02.gradle.android/)    
- * java project third party lib 포함해서 빌드하기 [[보기]](/2017/03/14/01.gradle.java/)    
+ * android lib module 생성 후 application에서 참조하기 [[보기]](/app/2017/03/09/02.gradle.android/)    
+ * java project third party lib 포함해서 빌드하기 [[보기]](/app/2017/03/14/01.gradle.java/)    
  
 ---
 <h1 class="table-contents">C++</h1>
