[etc] sitemap.xml 수정

--- a/_posts/2017-02-24-02.post.mongodb.md
+++ b/_posts/2017-02-24-02.post.mongodb.md
@@ -2,6 +2,12 @@
 layout: post
 title: mongoDB 설치 가이드 및 CRUD 예제 
 date: 2016-11-17T14:37:44.000Z
+category: app
+---
+
+<img class="fit image" src="/images/post/mongodb.png">
+이미지 출처: https://webassets.mongodb.com/_com_assets/cms/MongoDB-Logo-5c3a7405a85675366beb3a5ec4c032348c390b3f142f5e6dddf1d78e2df5cb5c.png
+
 ---
 
 
