--- a/_posts/2017-02-24-03.post.mongodb.md
+++ b/_posts/2017-02-24-03.post.mongodb.md
@@ -2,7 +2,12 @@
 layout: post
 title: mongoDB 테스트용 json파일 import 및 document(bson) 조회 
 date: 2016-11-17T14:37:44.000Z
+category: app
 ---
+
+<img class="fit image" src="/images/post/mongodb.png">
+이미지 출처: https://webassets.mongodb.com/_com_assets/cms/MongoDB-Logo-5c3a7405a85675366beb3a5ec4c032348c390b3f142f5e6dddf1d78e2df5cb5c.png
+
 ---
 오늘은 json파일을 이용한 document(bson) import 후 다양한 구문을 이용하여 document(bson)를 조회하는 예제를 작성해 보겠습니다.
 mongoDB 설치 및 간단한 CRUD 예제는 아래 링크에서 확인하시면 됩니다.
