--- a/_posts/2017-03-05-99.index.md
+++ b/_posts/2017-03-05-99.index.md
@@ -7,20 +7,20 @@ date: 2017-03-21T02:00
 ---
 <h1 class="table-contents">OPEN API</h1>
  * Naver
-   * Naver OAuth 2.0 for Android [[보기]](/2017/03/08/02.oauth.naver/) 
+   * Naver OAuth 2.0 for Android [[보기]](/app/2017/03/08/02.oauth.naver/) 
  * Kakao
-   * Kakao OAuth 2.0 for Android [[보기]](/2017/03/09/01.oauth.kakao/)    
+   * Kakao OAuth 2.0 for Android [[보기]](/app/2017/03/09/01.oauth.kakao/)    
    
 ---
 <h1 class="table-contents">NOSQL</h1>
  * mongoDB
-   * mongoDB 설치 가이드 및 CRUD 예제 [[보기]](/2016/11/17/02.post.mongodb/) 
-   * mongoDB 테스트용 json파일 import 및 document(bson) 조회 [[보기]](/2016/11/17/03.post.mongodb/)  
+   * mongoDB 설치 가이드 및 CRUD 예제 [[보기]](/app/2016/11/17/02.post.mongodb/) 
+   * mongoDB 테스트용 json파일 import 및 document(bson) 조회 [[보기]](/app/2016/11/17/03.post.mongodb/)  
 
 ---
 <h1 class="table-contents">JEKYLL</h1>
  * jekyll 환경구축
-   * ruby 및 thirdparty lib 설치하기 [[보기]](/2017/03/08/01.jekyll/) 
+   * ruby 및 thirdparty lib 설치하기 [[보기]](/app/2017/03/08/01.jekyll/) 
 
 ---
 <h1 class="table-contents">GRADLE</h1>
@@ -104,7 +104,7 @@ date: 2017-03-21T02:00
 ---
 <h1 class="table-contents">ETC</h1>
  * WINDOWS
-   * 기본 명령어 [[보기]](/2017/03/12/01.windows.command/)
+   * 기본 명령어 [[보기]](/app/2017/03/12/01.windows.command/)
  * UBUNTU
-   * 기본 명령어 [[보기]](/2017/03/12/02.ubuntu.command/)
+   * 기본 명령어 [[보기]](/app/2017/03/12/02.ubuntu.command/)
 
