--- a/_posts/2017-03-08-01.jekyll.md
+++ b/_posts/2017-03-08-01.jekyll.md
@@ -2,6 +2,7 @@
 layout: post
 title: ruby 및 thirdparty lib 설치하기
 date: 2017-03-08T01:00
+category: app
 ---
 
 <img class="fit image" src="/images/jekyll-logo-dark-solid.png">
