--- a/_posts/2017-03-12-01.windows.command.md
+++ b/_posts/2017-03-12-01.windows.command.md
@@ -2,6 +2,7 @@
 layout: post
 title: windows 기본 명령어
 date: 2017-03-12T01:00
+category: app
 ---
 
 <img class="fit image" src="/images/post/windows.png">
