--- a/_posts/2017-03-08-02.oauth.naver.md
+++ b/_posts/2017-03-08-02.oauth.naver.md
@@ -2,6 +2,7 @@
 layout: post
 title: Naver OAuth 2.0 for Android
 date: 2017-03-08T01:00
+category: app
 ---
 
 <img class="fit image" src="/images/post/oauth_naver01.png">
