--- a/_posts/2017-03-09-01.oauth.kakao.md
+++ b/_posts/2017-03-09-01.oauth.kakao.md
@@ -2,6 +2,7 @@
 layout: post
 title: Kakao OAuth 2.0 for Android
 date: 2017-03-09T01:00
+category: app
 ---
 
 <img class="fit image" src="/images/post/oauth_kakao01.jpg">
