--- a/_posts/2017-03-21-03.app.easydiary.md
+++ b/_posts/2017-03-21-03.app.easydiary.md
@@ -6,7 +6,7 @@ category: app
 ---
 
 <img class="fit image" src="/images/post/app_easydiary01.png">
-### 이름: 쉽게쓰는 음성인식 일기(Easy Diary)
+### 이름: 쉽게쓰는 음성인식 일기장(Easy Diary)
 ### 기능: 안드로이드 다이어리 어플
 ### 다운로드: https://play.google.com/store/apps/details?id=me.blog.korn123.easydiary
 
