--- a/_posts/2017-03-21-02.app.easyphotomap.md
+++ b/_posts/2017-03-21-02.app.easyphotomap.md
@@ -6,7 +6,7 @@ category: app
 ---
 
 <img class="fit image" src="/images/post/app_easyphotomap01.png">
-### 이름: 쉽게쓰는 음성인식 일기(Easy Diary)
+### 이름: 지도 위에 모으는 여행사진 포토맵(Photo Map)
 ### 기능: 안드로이드 포토맵 어플
 ### 다운로드: https://play.google.com/store/apps/details?id=me.blog.korn123.easyphotomap
 
