--- a/_posts/2017-03-21-03.app.easydiary.md
+++ b/_posts/2017-03-21-03.app.easydiary.md
@@ -35,8 +35,6 @@ category: app
 <img class="fit image" src="/images/post/app_easydiary02_01.png">
 <img class="fit image" src="/images/post/app_easydiary02_02.png">
 
-
-
 ## 2. 일기 검색
 <pre>
 작성이 완료된 일기는 검색화면에 검색이 가능합니다.
@@ -44,7 +42,6 @@ category: app
 검색어는 키패드 및 음성인식 기능을 이용하여 입력할 수 있습니다.
 </pre>
 <img class="fit image" src="/images/post/app_easydiary03.png">
-
 
 ## 3. 일기 보기&듣기
 <pre>
@@ -55,7 +52,13 @@ category: app
 ## 4. 일기 수정(음성 & 키패드)
 <img class="fit image" src="/images/post/app_easydiary05.png">
 
-## 5. 일기 백업 및 복구
+## 5. 시간대별 일기작성 현황 차트로 보기
+<img class="fit image" src="/images/post/app_easydiary07.png">
+
+## 6. 일별 일기작성 현황 캘린더로 보기
+<img class="fit image" src="/images/post/app_easydiary08.png">
+
+## 7. 일기 백업 및 복구
 <pre>
 작성이 완료된 모든 일기는 개인의 구글계정과 연동하여 구글드라이브에 백업하고 다른 디바이스에서 복구할 수 있습니다.
 </pre>
