[etc] add posting tag

--- a/_posts/2017-03-21-01.app.awesomemanager.md
+++ b/_posts/2017-03-21-01.app.awesomemanager.md
@@ -9,6 +9,7 @@ category: app
 ### 이름: 유소년 스포츠클럽 관리어플 Awesome Manager
 ### 기능: 유소년 스포츠클럽 관리
 ### 다운로드: https://play.google.com/store/apps/details?id=me.blog.korn123.awesomemanager
+#### #축구교실 관리 #농구교실 관리 #스포츠클럽 관리 #출석부 #출석문자
 
 ---
 
