--- a/_posts/2017-03-21-03.app.easydiary.md
+++ b/_posts/2017-03-21-03.app.easydiary.md
@@ -9,6 +9,7 @@ category: app
 ### 이름: 쉽게쓰는 음성인식 일기장(Easy Diary)
 ### 기능: 안드로이드 다이어리 어플
 ### 다운로드: https://play.google.com/store/apps/details?id=me.blog.korn123.easydiary
+#### #일기장 #다이어리 #음성인식 
 
 ---
 
