[etc] add posting tag

--- a/_posts/2017-03-21-02.app.easyphotomap.md
+++ b/_posts/2017-03-21-02.app.easyphotomap.md
@@ -9,7 +9,7 @@ category: app
 ### 이름: 지도 위에 모으는 여행사진 포토맵(Photo Map)
 ### 기능: 안드로이드 포토맵 어플
 ### 다운로드: https://play.google.com/store/apps/details?id=me.blog.korn123.easyphotomap
-#### #포토맵 #지도사진 #여행사진 #photo map
+[#포토맵]({{page.url}}) [#지도사진]({{page.url}}) [#여행사진]({{page.url}}) [#photo map]({{page.url}})
 
 ---
 
