--- a/_posts/2017-03-21-03.app.easydiary.md
+++ b/_posts/2017-03-21-03.app.easydiary.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: android 일기장 어플 easy diary
+title: 안드로이드 비밀일기장 이지다이어리
 date: 2017-03-21T01:00
 category: app
 ---
 
 <img class="fit image" src="/images/post/app_easydiary01.png">
-### 이름: 쉽게쓰는 음성인식 일기장(Easy Diary)
-### 기능: 안드로이드 다이어리 어플
+### 이름: 쉽게쓰는 비밀일기장 이지다이어리(Easy Diary)
+### 기능: 안드로이드 일기장 어플
 ### 다운로드: https://play.google.com/store/apps/details?id=me.blog.korn123.easydiary
 [#일기장]({{page.url}}) [#다이어리]({{page.url}}) [#음성인식]({{page.url}})
 
@@ -59,7 +59,14 @@ category: app
 ## 6. 일별 일기작성 현황 캘린더로 보기
 <img class="fit image" src="/images/post/app_easydiary08.png">
 
-## 7. 일기 백업 및 복구
+## 7. 일기장 잠그기
+<pre>
+비밀번호를 설정하여 일기장을 잠글 수 있습니다.
+</pre>
+<img class="fit image" src="/images/post/app_easydiary09_01.png">
+<img class="fit image" src="/images/post/app_easydiary09_02.png">
+
+## 8. 일기 백업 및 복구
 <pre>
 작성이 완료된 모든 일기는 개인의 구글계정과 연동하여 구글드라이브에 백업하고 다른 디바이스에서 복구할 수 있습니다.
 </pre>
