[etc] easy diary posting screenshot 변경

--- a/_posts/2017-03-21-03.app.easydiary.md
+++ b/_posts/2017-03-21-03.app.easydiary.md
@@ -49,6 +49,7 @@ category: app
 작성이 완료된 일기는 TTS 기능을 이용하여 음성으로 들을 수 있습니다.
 </pre>
 <img class="fit image" src="/images/post/app_easydiary04.png">
+<img class="fit image" src="/images/post/app_easydiary04_02.png">
 
 ## 4. 일기 수정(음성 & 키패드)
 <img class="fit image" src="/images/post/app_easydiary05.png">
