[etc] easy diary posting screenshot 변경

--- a/_posts/2017-03-21-03.app.easydiary.md
+++ b/_posts/2017-03-21-03.app.easydiary.md
@@ -65,6 +65,7 @@ category: app
 비밀번호를 설정하여 일기장을 잠글 수 있습니다.
 </pre>
 <img class="fit image" src="/images/post/app_easydiary09_01.png">
+<img class="fit image" src="/images/post/app_easydiary09_03.png">
 <img class="fit image" src="/images/post/app_easydiary09_02.png">
 
 ## 8. 일기 백업 및 복구
