[etc] easy diary posting screenshot 변경

--- a/_posts/2017-03-21-03.app.easydiary.md
+++ b/_posts/2017-03-21-03.app.easydiary.md
@@ -68,7 +68,28 @@ category: app
 <img class="fit image" src="/images/post/app_easydiary09_03.png">
 <img class="fit image" src="/images/post/app_easydiary09_02.png">
 
-## 8. 일기 백업 및 복구
+## 8. 일기장 카드 만들기 & 공유하기
+<pre>
+작성이 완료된 일기를 이용하여 일기장 카드를 만들고 공유할 수 있습니다.
+자신의 사생활이 담긴 내용을 공유하는 용도라기 보다는 명언, 축하메시지등을
+일기장에 작성하고 그 내용을 카드로 만들어서 다른 사람과 공유하는 기능이라고 생각하면 될 것 같습니다. 
+</pre>
+<span>[step1]공유대상 컨텐츠 선택</span>
+<img class="fit image" src="/images/post/app_easydiary10_01.png">
+<span>[step2]일기장 카드 만들기 선택</span>
+<img class="fit image" src="/images/post/app_easydiary10_02.png">
+<span>[step3]배경컬러 선택</span>
+<img class="fit image" src="/images/post/app_easydiary10_03.png">
+<span>[step4]텍스트컬러 선택</span>
+<img class="fit image" src="/images/post/app_easydiary10_04.png">
+<span>[step5]카드색상 및 내용 확인 예시1</span>
+<img class="fit image" src="/images/post/app_easydiary10_05.png">
+<span>[step6]카드색상 및 내용 확인 예시2</span>
+<img class="fit image" src="/images/post/app_easydiary10_06.png">
+<span>[step7]카카오톡을 이용한 공유</span>
+<img class="fit image" src="/images/post/app_easydiary10_07.png">
+
+## 9. 일기 백업 및 복구
 <pre>
 작성이 완료된 모든 일기는 개인의 구글계정과 연동하여 구글드라이브에 백업하고 다른 디바이스에서 복구할 수 있습니다.
 </pre>
