--- a/_posts/2017-03-21-03.app.easydiary.md
+++ b/_posts/2017-03-21-03.app.easydiary.md
@@ -89,7 +89,13 @@ category: app
 <span>[step7]카카오톡을 이용한 공유</span>
 <img class="fit image" src="/images/post/app_easydiary10_07.png">
 
-## 9. 일기 백업 및 복구
+## 9. 일기장 타임라인
+<pre>
+작성이 완료된 일기는 타임라인 기능을 이용하여 시간에 흐름에 따라 볼 수 있습니다.
+</pre>
+<img class="fit image" src="/images/post/app_easydiary11_01.png">
+
+## 10. 일기 백업 및 복구
 <pre>
 작성이 완료된 모든 일기는 개인의 구글계정과 연동하여 구글드라이브에 백업하고 다른 디바이스에서 복구할 수 있습니다.
 </pre>
