Add jupyter notebook quick start guide

--- a/_posts/2017-08-16-01.jupyter.installation.md
+++ b/_posts/2017-08-16-01.jupyter.installation.md
@@ -23,7 +23,7 @@ Jupyter Notebook은 아래의 순서대로 설치하시면 됩니다.
 아나콘다 배포판 패키지 다운로드<br>
 <img class="image" src="/images/post/jupyter_01.png">
 
-## 2. 아나콘다패키지 설치(For Winodws)
+## 2. 아나콘다패키지 설치(For Windows)
 Anaconda3-x.x.x-Windows-x86_64.exe 파일 실행<br>
 <img class="image" src="/images/post/jupyter_02.png">
 
